--- a/reg.html
+++ b/reg.html
@@ -1,8 +1,10 @@
+
 <html>
 <body>
 <f1 file is created>
 <f2 file is renamed>
 < f0 file is deleted>
+<fi is created>
 <f3 file is trunckend>
 </body>
 </html>
